--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,16 @@
 [metadata]
-root_url = https://github.com/otosense/
+name = gurgle
+version = 0.0.10
 url = https://github.com/otosense/gurgle
+platforms = any
+description_file = README.md
+root_url = https://github.com/otosense/
 license = apache-2.0
 author = OtoSense
-version = 0.0.9
 description = Wrappers to extend ML processing components (perform online/mini-batch learning - track residues - store data - track drift etc.)
-description_file = README.md
 long_description = file:README.md
 long_description_content_type = text/markdown
 keywords = 
-		
-name = gurgle
 display_name = gurgle
 
 [options]
@@ -22,10 +22,8 @@ install_requires =
 	lined
 	taped
 	slang
-		
 
 [options.entry_points]
 console_scripts = 
 	gurgle-terminal = gurgle.terminal:main
-
 
